[REFACTOR] 설문 결과 조회