@@ -3,11 +3,9 @@ package com.growplan.survey.service;
 import com.growplan.child.domain.UserChild;
 import com.growplan.child.domain.repository.ChildRepository;
 import com.growplan.common.exception.BadRequestException;
-import com.growplan.survey.domain.ChildSurvey;
-import com.growplan.survey.domain.Feedback;
-import com.growplan.survey.domain.SurveyGroup;
-import com.growplan.survey.domain.SurveyResult;
+import com.growplan.survey.domain.*;
 import com.growplan.survey.domain.repository.ChildSurveyRepository;
+import com.growplan.survey.domain.repository.DevelopmentTypeRepository;
 import com.growplan.survey.domain.repository.SurveyGroupRepository;
 import com.growplan.survey.domain.repository.SurveyResultRepository;
 import com.growplan.survey.dto.response.DevelopmentResultResponse;
@@ -20,11 +18,10 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.Period;
 import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.growplan.common.code.ExceptionCode.CHILD_SURVEY_NOT_FOUND;
-import static com.growplan.common.code.ExceptionCode.USER_CHILD_NOT_FOUND;
+import static com.growplan.common.code.ExceptionCode.*;
 
 @Slf4j
 @Service
@@ -36,17 +33,19 @@ public class DevelopService {
     private final ChildSurveyRepository childSurveyRepository;
     private final SurveyResultRepository surveyResultRepository;
     private final SurveyGroupRepository surveyGroupRepository;
+    private final DevelopmentTypeRepository developmentTypeRepository;
 
     public DevelopmentScaleSurveyResponse getDevelopmentScalesAndSurveys(final Long userId, final Long childId) {
         final UserChild userChild = childRepository.findByUserIdAndChildId(userId, childId)
                 .orElseThrow(() -> new BadRequestException(USER_CHILD_NOT_FOUND));
 
-        final Double validAge = calculateAge(userChild.getBirthdate());
+        // TODO 주수로 변경 가능
+        final Double childAge = calculateAge(userChild.getBirthdate());
         final Integer months = calculateAgeInMonths(userChild.getBirthdate());
 
         final List<SurveyResult> surveyResults = surveyResultRepository.findRecentSurveyResults(userChild.getId());
 
-        final List<SurveyGroup> surveyGroups = surveyGroupRepository.findSurveyGroupByValidAge(validAge);
+        final List<SurveyGroup> surveyGroups = surveyGroupRepository.findSurveyGroupByValidAge(childAge);
 
         return DevelopmentScaleSurveyResponse.of(userChild, months, surveyResults, surveyGroups);
     }
@@ -57,7 +56,7 @@ public class DevelopService {
 
         final LocalDate currentDate = LocalDate.now();
 
-        final List<ChildSurvey> surveys = getSurveys(userChild, currentDate, developmentType);
+        final List<ChildSurvey> surveys = getChildSurveys(userChild, currentDate, developmentType);
 
         final Integer developmentScore = calculateDevelopmentScore(surveys);
         final Boolean isRisk = calculateRisk(developmentScore);
@@ -67,11 +66,11 @@ public class DevelopService {
 
         updateSurveyScore(surveyResult, developmentScore, isRisk);
 
-        return DevelopmentResultResponse.of(surveys, developmentScore, feedbacks);
+        return DevelopmentResultResponse.of(currentDate, surveys, developmentScore, feedbacks);
     }
 
-    private List<ChildSurvey> getSurveys(final UserChild userChild, final LocalDate date, final String developmentType) {
-        List<ChildSurvey> surveys = childSurveyRepository.findByChildIdAndDevelopmentType(date, developmentType, userChild.getId());
+    private List<ChildSurvey> getChildSurveys(final UserChild userChild, final LocalDate date, final String developmentType) {
+        final List<ChildSurvey> surveys = childSurveyRepository.findByChildIdAndDevelopmentType(date, developmentType, userChild.getId());
         if (surveys.isEmpty()) {
             throw new BadRequestException(CHILD_SURVEY_NOT_FOUND);
         }
@@ -79,10 +78,6 @@ public class DevelopService {
     }
 
     private Integer calculateDevelopmentScore(final List<ChildSurvey> surveys) {
-        if (surveys.isEmpty()) {
-            return 0;
-        }
-
         double totalWeight = 0.0;
         double totalScore = 0.0;
 
@@ -106,20 +101,23 @@ public class DevelopService {
     }
 
     private List<Feedback> getFeedbacks(final List<ChildSurvey> surveys, final Integer developmentScore) {
-        return surveys.stream()
-                .map(survey -> survey.getSurvey().getSurveyGroup())
-                .flatMap(surveyGroup -> surveyGroup.getFeedbacks().stream())
+        final SurveyGroup surveyGroup = surveys.get(0).getSurvey().getSurveyGroup();
+
+        return surveyGroup.getFeedbacks().stream()
                 .filter(feedback -> feedback.getMinRange() <= developmentScore && developmentScore < feedback.getMaxRange())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private SurveyResult getOrCreateSurveyResult(final UserChild userChild, final String developmentType, final LocalDate currentDate, final Integer developmentScore, final Boolean isRisk, final List<ChildSurvey> surveys) {
-        return surveyResultRepository.findByDateAndDevelopmentType(currentDate, developmentType)
+    private SurveyResult getOrCreateSurveyResult(final UserChild userChild, final String developmentType, final LocalDate date, final Integer developmentScore, final Boolean isRisk, final List<ChildSurvey> surveys) {
+        return surveyResultRepository.findByDateAndDevelopmentType(date, developmentType)
                 .orElseGet(() -> {
-                    SurveyResult newSurveyResult = new SurveyResult(
+                    final DevelopmentType type = developmentTypeRepository.findByType(developmentType)
+                            .orElseThrow(() -> new BadRequestException(DEVELOPMENT_TYPE_NOT_FOUND));
+
+                    final SurveyResult newSurveyResult = new SurveyResult(
                             userChild,
-                            surveys.get(0).getSurvey().getSurveyGroup().getDevelopmentType(),
+                            type,
                             developmentScore,
                             isRisk
                     );
@@ -150,7 +148,12 @@ public class DevelopService {
     }
 
     private int calculateAgeInMonths(final String birthdateStr) {
-        final Period period = getAgePeriod(birthdateStr);
-        return period.getYears() * 12 + period.getMonths();
+        final DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+        final LocalDate birthdate = LocalDate.parse(birthdateStr, formatter);
+        final LocalDate today = LocalDate.now();
+
+        final long totalDays = ChronoUnit.DAYS.between(birthdate, today);
+
+        return (int) (totalDays / 30);
     }
 }
